nuevos ajustes asistencia doctores
